2024-05-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-make-process):
	Obey `tramp-histfile-override'.  (Bug#71049)

	* tramp-sh.el (tramp-histfile-override): Add ;;;###tramp-autoload
	cookie and `permanent-local' symbol property.

2024-05-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-make-process):
	* tramp-androidsu.el (tramp-androidsu-handle-make-process):
	Set sentinel `ignore'.  (Bug#71049)

	* tramp-androidsu.el (tramp-androidsu-maybe-open-connection):
	* tramp-gvfs.el (tramp-gvfs-maybe-open-connection):
	Adapt progress-reporter message.

	* tramp-sh.el (tramp-maybe-open-connection):
	Divide progress-reporter into two parts.  (Bug#70901)

2024-05-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-container.el: Move connection-local settings where they
	belong to.

	* tramp-sshfs.el (tramp-connection-properties): Do not set
	connection property "direct-async-process".
	(tramp-direct-async-process): Set connection-local value.

2024-05-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-find-shell, tramp-find-inline-compress)
	(tramp-get-remote-path):
	* tramp-smb.el (tramp-smb-handle-process-file): Use `tramp-warning'.

2024-05-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-connection-local-p): Sync with
	Emacs source.
	(tramp-compat-connection-local-value): New defalias.

	* tramp-message.el (tramp-warning): New defsubst.

	* tramp.el (tramp-direct-async-process): New defvar.
	(tramp-direct-async-process-p): Use connection-local variable for
	check.  (Bug#70959)

2024-05-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-androidsu.el (tramp-androidsu-maybe-open-connection):
	Use `tramp-user-error' for the traces.

2024-05-14  Po Lu  <luangruo@yahoo.com>

	* tramp-androidsu.el (tramp-androidsu-maybe-open-connection):
	Search for `su' when the connection is initiated; replace PATH of
	inferior shell with trap-androidsu-remote-path.